[package]
name = "libosinfo"
version = "0.1.0"
authors = ["Zeeshan Ali <zeeshanak@gnome.org>"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.libosinfo-sys]
version = "0.2.0"
path = "../sys"

[dependencies.glib]
version = "0.3.0"
git = "https://github.com/gtk-rs/glib"

[dependencies.glib-sys]
version = "0.4.0"
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
version = "0.4.0"
git = "https://github.com/gtk-rs/sys"

[dependencies.gio]
version = "0.2.0"
git = "https://github.com/gtk-rs/gio"

[lib]
name = "libosinfo"
