[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.4.0"

[features]
dox = []

[lib]
name = "libosinfo_sys"

[package]
build = "build.rs"
links = "libosinfo"
name = "libosinfo-sys"
version = "0.2.0"
